--- a/styles.css
+++ b/styles.css
@@ -405,9 +405,8 @@ table tr td:hover{
 
 
 }
-.design-container i:hover{
+.design-container .hover-fuction:hover .fs-1 {
     color: rgb(238, 98, 48)!important;
-
     transform: scale(1.2);
 }
 
