--- a/styles.css
+++ b/styles.css
@@ -418,20 +418,47 @@ table tr td:hover{
     color: whitesmoke!important;
 }
 
-.font-weight h2{
+.font-weight h2, .font-heightt h2{
     font-weight: 300!important;
 }
 .font-weight{
-    background-image: linear-gradient(#ffffff, rgba(189, 189, 189, 0.932));;
+    background-image: linear-gradient(#ffffff, rgba(189, 189, 189, 0.932));
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 5%;
-    padding-bottom: 5%;
+    padding-bottom: 0;
     background: cover;
 }
 
-.container img{
+.font-weight img{
     opacity: 0.4;
 }
 
+.lay-image img{
+    opacity: 1;
+}
 
+.font-heightt{
+    background: rgb(248, 73, 9);
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 5%;
+    padding-bottom: 6%;
+    background: cover;
+}
+
+.font-heightt button{
+    border: 1px solid white;
+    padding: 5px 30px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.090);
+    color: white;
+    font-weight: 700;
+    transition: 0.6s;
+}
+
+.font-heightt button:hover{
+    background-color: white;
+    color: black;
+
+}
