--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,7 @@ table tr td:hover{
     padding-right: 15%;
     padding-top: 5%;
     padding-bottom: 5%;
-    background-image: linear-gradient(#6b696928, rgba(0, 0, 0, 0.904)), url(image/background/bg-8.jpg);
+    background-image: linear-gradient(#201f1f7a, rgba(0, 0, 0, 1)), url(image/background/bg-8.jpg);
     background: cover;
 
 
@@ -405,7 +405,7 @@ table tr td:hover{
     padding-top: 5%;
     padding-bottom: 5%;
     background: cover;
-    background-image: linear-gradient(#14141460, rgba(0, 0, 0, 0.904));
+    background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, 1));
 
 
 }
@@ -439,7 +439,7 @@ table tr td:hover{
 }
 
 .font-heightt{
-    background: rgb(248, 73, 9);
+    background: rgb(233, 84, 0);
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 5%;
@@ -453,12 +453,96 @@ table tr td:hover{
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.090);
     color: white;
-    font-weight: 700;
+    font-weight: 400;
+    font-family: luna;
     transition: 0.6s;
 }
 
 .font-heightt button:hover{
     background-color: white;
-    color: black;
+    color:rgb(233, 84, 0);
+    font-family: luna;
 
 }
+
+
+.footer-content{
+    background: rgb(0,25,35);
+    display: flex;
+    font-family: 'Open Sans Condensed', sans-serif;
+    padding: 0 18%;
+}
+
+
+.card-body #bttnn{
+    padding: 2px 25px;
+    border-radius: 20px;
+    border: 0;
+    color: white;
+    background: rgb(233, 84, 0);
+}
+.card-body #bttnn:hover {
+    background: transparent;
+    border: 1px solid rgb(233, 84, 0);
+    color:rgb(233, 84, 0);
+}
+
+.email-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding:0 5%!important;
+}
+
+.email-box button{
+    background: rgb(233, 84, 0);
+}
+
+.email-box i{
+    font-size: 20px;
+    padding: 5px;
+    color: rgb(255, 253, 253);
+   
+
+}
+
+.email-box input:hover{
+    background: #fff!important;
+
+}
+
+
+
+.email-box i:hover{
+    color:rgb(233, 84, 0);
+    font-size: 20px;
+
+    
+}
+.email-box button:hover{
+    background: transparent!important;
+    border-left: 0!important;
+
+    
+}
+.ic{
+    opacity: 0.7;
+    font-size: 16px;
+    margin-right: 3px;
+    box-sizing: border-box;
+}
+
+.ic:hover{
+    color: rgb(6, 161, 148)!important;
+}
+
+.footer-text{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -5px;
+    flex-wrap: wrap;
+
+}
+
+
+
