--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,64 @@ header *{
   }
 
 
-  /* Media Quary */
+/* ---------------------
+=====media queary====== 
+-----------------------*/
+@media (max-width:480px){
+    .links{
+      display: none;
+    }
+    .page-background{
+      margin-top: 60%;
+      margin-left: 10px;
+      font-size: 1.5rem;
+    }
+    .aside{
+      margin: 3rem 5rem 5rem 5rem;
+    }
+}
+@media (min-width:481px) and (max-width:768px){
+  
+    .page-background{
+      margin-top: 50%;
+      margin-left: 20px;
+      font-size: 2rem;
+    }
+    .btn-grad{
+      font-size: 1.5rem;
+    }
+    .links{
+      display: none;
+    }
+    .logo img{
+      width: 5rem;
+      height: 5rem;
+    }
+}
+
+@media (min-width:769px) and (max-width:1024px){
+  
+  .page-background{
+    margin-top: 50%;
+    margin-left: 20px;
+    font-size: 2.5rem;
+  }
+  .btn-grad{
+    font-size: 1.8rem;
+  }
+  .links{
+    font-size: 1.8rem;
+  }
+ 
+  .logo img{
+    width: 60px;
+    height: 60px;
+  }
+}
+
+
+/* another section */
+  
 .container-text{
     display: flex;
     flex-direction: column;
@@ -297,9 +354,11 @@ header *{
     font-weight: 300;
     margin-left: 70px;
     margin-top: 2%;
+    
     /* background-color: teal; */
 
 }
+
 
 table tr td{
     width: 180px;
