--- a/style.css
+++ b/style.css
@@ -92,14 +92,11 @@ header *{
 }
 
 .customized{
-    margin-top: 75px;
-    margin-left: 180px;
+    width: 75%!important;
 
 }
-.customized2{
-    margin-left: 105px;
 
-}
+
 .customized3{
     top: 15%;
     left: 50%;
@@ -110,7 +107,6 @@ header *{
 
 article{
     margin-top: 25%;
-    
     background-image: url(image/background/bg-agency-02.jpg);
     background:cover;
     transform-origin: center center 0;
@@ -149,8 +145,8 @@ article{
 .vorder{
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 15px; 
-    margin: 10px;
-    padding: 20px 2px;
+    padding: 20px 15px;
+    margin: 5px;
     
   
 }
@@ -205,8 +201,9 @@ article{
 .cilent-text{
     border-radius: 15px;
     position: relative;
-    margin:40px 10px;
     background-color: white;
+    margin: 15px ;
+    padding: 5px 15px 10px 10px;
 
 }
 
@@ -226,7 +223,7 @@ article{
 }
 
 .mail-box{
-    margin: 30px 20px 30px 0px;
+    margin: 20px 10px;
 }
 
 .mail-box .btn:hover{
@@ -239,4 +236,307 @@ article{
     margin: 2px;
     padding: 0;
     font-size: 10px;
+}
+.Brrk{
+    display: block;
+}
+
+@media  (max-width:1700px){
+    article{
+        margin-top: 30%;
+    }
+
+    header h1{
+        margin: -320px;
+        font-size: 44px;
+    }
+
+    .btn-grad{
+       
+        margin-top:350px ;
+    }
+    .Brrk{
+        display: block;
+    }
+}
+
+@media  (max-width:1399px){
+    article{
+        margin-top: 35%;
+    }
+
+    header h1{
+        margin: -300px;
+        font-size: 44px;
+    }
+    .Brrk{
+        display: block;
+    }
+   
+    
+}
+
+@media  (max-width:1200px){
+    article{
+        margin-top: 40%;
+    }
+
+    header h1{
+        margin: -280px;
+        font-size: 44px;
+    }
+    .Brrk{
+        display: block;
+    }
+    
+    
+}
+
+
+
+@media  (max-width:1100px){
+    article{
+        margin-top: 45%;
+    }
+
+    header h1{
+        margin: -200px;
+        font-size: 40px;
+    }
+
+    .btn-grad{
+       
+        margin-top:300px ;
+    }
+    .Brrk{
+        display: block;
+    }
+    
+    
+}
+
+@media  (max-width:997px){
+    
+    header h1{
+        margin: -100px;
+        font-size: 48px;
+    }
+
+    .btn-grad{
+       
+        margin-top:150px ;
+    }
+    header::before{
+        top:-300px
+    }
+    .Brrk{
+        display: block;
+    }
+    
+    
+}
+
+@media  (max-width:898px){
+    
+    header h1{
+        margin: -100px;
+        font-size: 48px;
+    }
+
+    .btn-grad{
+       
+        margin-top:150px ;
+    }
+    header::before{
+        top:-100px
+    }
+    article{
+        margin-top: 50%;
+    }
+    .breaktext{
+        display: block;
+    }
+    
+}
+
+
+
+
+@media  (max-width:840px){
+    
+    header h1{
+        margin: 0px;
+        font-size: 44px;
+    }
+
+    .btn-grad{
+       
+        margin-top:30px ;
+    }
+    header::before{
+        top:-50px
+    }
+   
+    .breaktext{
+        display: block;
+    }
+    
+}
+
+@media  (max-width:810px){
+    
+    header h1{
+        margin: 0px;
+        font-size: 44px;
+    }
+
+    .btn-grad{
+       
+        margin-top:30px ;
+    }
+    header::before{
+        top:-40px
+    }
+   
+    .breaktext{
+        display: block;
+    }
+    article{
+        margin-top: 60%;
+    }
+}
+
+@media  (max-width:777px){
+    
+    header h1{
+        margin: -40px;
+        font-size: 44px;
+    }
+
+    .btn-grad{
+       
+        margin-top:80px ;
+    }
+   
+   
+    .breaktext{
+        display: block;
+    }
+    article{
+        margin-top: 70%;
+    }
+    .texttt{
+        color: rgb(199, 56, 0)!important;
+    }
+}
+
+@media  (max-width:777px){
+    
+    header h1{
+        margin: -40px;
+        font-size: 44px;
+    }
+
+    .btn-grad{
+       
+        margin-top:80px ;
+    }
+   
+   
+    .breaktext{
+        display: block;
+    }
+    article{
+        margin-top: 70%;
+    }
+    .texttt{
+        color: rgb(204, 58, 0)!important;
+    }
+}
+@media  (max-width:411px) and (max-height:823px){
+    
+    header h1{
+        margin: -40px;
+        font-size: 28px;
+    }
+
+    .btn-grad{
+       
+        margin-top:80px ;
+    }
+   
+   
+    .breaktext{
+        display: block;
+    }
+    article{
+        margin-top: 400px!important;
+    }
+    .texttt{
+        color: rgb(204, 58, 0)!important;
+    }
+
+    .txtttt{
+        margin-left:0px !important;
+        margin-right: 0px !important;
+    }
+}
+
+
+@media  (max-width:414px) and (max-height:736px){
+    
+    header h1{
+        margin: -40px;
+        font-size: 28px;
+    }
+
+    .btn-grad{
+       
+        margin-top:80px ;
+    }
+   
+   
+    .breaktext{
+        display: block;
+    }
+    article{
+        margin-top: 400px!important;
+    }
+    .texttt{
+        color: rgb(204, 58, 0)!important;
+    }
+
+    .txtttt{
+        margin-left:0px !important;
+        margin-right: 0px !important;
+    }
+}
+
+@media  (max-width:380px) and (max-height:815px){
+    
+    header h1{
+        margin: -40px;
+        font-size: 28px;
+    }
+
+    .btn-grad{
+       
+        margin-top:80px ;
+    }
+   
+   
+    .breaktext{
+        display: block;
+    }
+    article{
+        margin-top: 400px!important;
+    }
+    .texttt{
+        color: rgb(204, 58, 0)!important;
+    }
+
+    .txtttt{
+        margin-left:0px !important;
+        margin-right: 0px !important;
+    }
 }
