--- a/styles.css
+++ b/styles.css
@@ -603,5 +603,48 @@ table tr td:hover{
 
 }
 
+/* .cilent-feedback{
+    background-image: url(image/background/pattern-05.png);
+    background:cover;
+    background-repeat: no-repeat;
+    margin-top: 0;
+} */
+
+.cilent-row{
+    margin-top: 100px!important;
+}
+
+.cilent-text{
+    border-radius: 15px;
+    position: relative;
+    background-color: white;
+    margin: 15px ;
+    padding: 5px 15px 10px 10px;
+
+}
+
+
+.hrr{
+
+    margin-top: -10px;
+    margin-left: 30px;
+}
+
+.image-desgin{
+    width: 25%;
+    position: absolute;
+    top: -38px;
+    left: 20px;
+    
+}
+
+.cilent-text:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset!important;
+    transform: scale(1.1);
+}
+
+.logoo img:hover{
+    transform: scale(1.2);
+}
 
 
