--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ header *{
     width: 100vw;
     color: white;
     padding: 1em 2em;
+    background-color: rgb(1, 3, 31);
     
     
 }
@@ -84,6 +85,14 @@ header *{
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+}
+
+/* make the aside bar sticky */
+.stickyy {
+	position: -webkit-sticky!important ;
+	position: sticky!important;
+	top: 0!important;
+    margin-bottom: 19rem!important;
 }
 
 .links ul{
@@ -118,31 +127,21 @@ header *{
     opacity: 1;
 }
 
-.purchase{
+.purchase a{
     /* border: 2px solid rgb(235, 34, 8); */
     border-width: 2px;
     border-style: solid;
     border-image: linear-gradient(to left,rgb(255, 255, 255), rgb(20, 20, 20), rgb(243, 39, 3)) 1;
     padding: 0 5px;
     background-color: transparent;
-    animation:bBlink 1s infinite;
-
-
-}
-
-
-@keyframes bBlink {
-    0% {
-        color: #f00;
-        
-    }
     
-    100% {
-        color: #fff;
 
-    }
+
 }
-.purchase:hover{
+
+
+
+.purchase a:hover{
     background-color: rgb(255, 255, 255);
     color: black !important;
     border: 2px solid white;
